--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=ea0827671849e0921f72d4e05803fb4c" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=9560e77b69e47e973988bdd0333ebc74">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=6fa97db2cead6074dca26927c7a9bc0d">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=00c12a8fc0fdcb9772326a038285da22">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=a52ea7a9fe9c64e9d1c95bdda87a4e8f">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -107,8 +107,8 @@
     Client -> Server : Request
     Server --> Client: Response
 @enduml</textarea></div>
-                <div class="col d-flex flex-row justify-content-center align-items-end" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;border: 2px solid var(--bs-body-color);background: var(--bs-body-bg);">
-                    <div class="d-flex justify-content-center align-items-center" style="padding: 20px;border-radius: 20px;background: white;width: 100%;height: 100%;"><img id="img-uml" class="none" style="width: 100%;height: 300px;object-fit: contain;object-position: center;background-repeat: no-repeat;" src="assets/img/example.png?h=920c35cef6ae2c4a33a11d4919eed56e">
+                <div class="col d-flex flex-row justify-content-center align-items-end" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;border: 2px solid var(--bs-body-color);background: #f5f5f5;">
+                    <div class="d-flex justify-content-center align-items-center" style="padding: 20px;background: white;width: 100%;height: 100%;border: 2px solid black ;"><img id="img-uml" class="none" style="width: 100%;height: 300px;object-fit: contain;object-position: center;" src="assets/img/example.png?h=920c35cef6ae2c4a33a11d4919eed56e">
                         <div class="d-flex justify-content-center align-items-center" style="position: absolute;height: 300px;width: 224px;"><div id="loader-img-uml">
     <svg class="circle-outer" viewBox="0 0 86 86">
         <circle class="back" cx="43" cy="43" r="40"></circle>
