--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=ea0827671849e0921f72d4e05803fb4c" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=206eb7bc2409ab128c09041e559db96d">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=0ef1fe7a6587f657894502fe4ac2fa0d">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=a890f5fd181fcddf277d5b3aed6ffad2">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=a432cf133288f39b27876ba7f8c09867">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -135,7 +135,7 @@
                         <div class="card-body p-sm-5" style="padding: 20px!important;border-radius: 20px;border: 2px solid var(--bs-body-color);">
                             <form method="post">
                                 <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;">
-                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="border-width: 0px;border-radius: 0;font-family: Inter, sans-serif;margin-bottom: 20px;padding: 10px;resize: none;height: 64px;" placeholder="Design a program ..."></textarea><select class="form-select" id="select-uml" style="padding: 10px;font-family: Inter, sans-serif;border-radius: 0;border: 2px solid var(--bs-body-color);" required="">
+                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="border-width: 0px;border-radius: 0;font-family: Inter, sans-serif;margin-bottom: 20px;padding: 10px;resize: none;min-height: 68px;" placeholder="Design a program ..."></textarea><select class="form-select" id="select-uml" style="padding: 10px;font-family: Inter, sans-serif;border-radius: 0;border: 2px solid var(--bs-body-color);" required="">
                                             <option value="">Activity</option>
                                             <option value="">Class</option>
                                             <option value="">Component</option>
@@ -157,9 +157,7 @@
         </div><!-- End: 2 Rows 1+2 Columns -->
     </section><!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="border-top: 2px solid var(--bs-body-color);">
-        <div class="container text-white py-4 py-lg-5" style="padding: 20px;">
-            <p class="text-muted mb-0" style="font-family: 'JetBrains Mono', monospace;color: white!important;">MIT License Copyright (c) 2UML 2024</p>
-        </div>
+        <div class="container text-white py-4 py-lg-5" style="padding: 20px;"><a href="https://github.com/robertovicario/2UML/blob/main/LICENSE" style="color: white;font-family: 'JetBrains Mono', monospace;text-decoration: none;" target="_blank">The MIT License Copyright (c) 2UML 2024</a></div>
     </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
 <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
@@ -168,7 +166,7 @@
 <script src="assets/src/compiler/code_mirror.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/desc.js?h=78195a7192dae9b754e249c68c981034"></script>
+    <script src="assets/js/desc.js?h=3d4b0868c620f98f4e2e3a0f96f93b84"></script>
     <script src="assets/js/download-uml.js?h=0ab5500c4f1312ec5e5581be65b8a81e"></script>
     <script src="assets/js/theme.js?h=ba5591acd93fc7a6da54d6fe53c04388"></script>
 </body>
