--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=ea0827671849e0921f72d4e05803fb4c" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=8793ef6caa697c086a6a1767501e36ed">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=a3234bc23b6e52578c4551a43d329b59">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css?h=f46138e906f7948e52ae6aac2657a2f0">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=52ac51cdcbe1f0dc06203003ce4849ff">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
@@ -135,7 +135,7 @@
                         <div class="card-body p-sm-5" style="padding: 20px!important;border-radius: 20px;/*border: 2px solid var(--bs-body-color);*/background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
                             <form method="post">
                                 <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;">
-                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;height: 68px;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a client-server interaction." required=""></textarea><select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
+                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;height: 68px;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a program ..." required=""></textarea><select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
                                             <option value="">Activity</option>
                                             <option value="">Class</option>
                                             <option value="">Component</option>
