--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             "url": "https://robertovicario.github.io/2UML"
         }
     </script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=a26e8f2f6744aca048049e4dd1a0ae24" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=a26e8f2f6744aca048049e4dd1a0ae24" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=a26e8f2f6744aca048049e4dd1a0ae24">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="manifest.json?h=bc338e20f84689a955eb087321de7dde" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=06e00f47fc6ee17a3d89bb49405670c0">
-    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css?h=f46138e906f7948e52ae6aac2657a2f0">
-    <link rel="stylesheet" href="assets/css/code_mirror.css?h=52ac51cdcbe1f0dc06203003ce4849ff">
-    <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
-    <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
-    <link rel="stylesheet" href="assets/css/loader.css?h=05f8705ec265076de9d0fa8086516620">
-    <link rel="stylesheet" href="assets/css/styles.css?h=cdd12a101f9dc44e63da5437584ca1dc">
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
+    <link rel="stylesheet" href="assets/css/Inter.css">
+    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="assets/css/code_mirror.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css">
+    <link rel="stylesheet" href="assets/css/loader.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
 </style>
@@ -86,7 +86,7 @@
         <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body d-flex justify-content-center align-items-center" style="padding: 20px;background: white;">
-                    <div style="width: 256px;background: url(&quot;assets/img/2UML_QR.png?h=4bdd96d83ee42aeb1c0b905895bde5d2&quot;) center / contain no-repeat;height: 256px;"></div>
+                    <div style="width: 256px;background: url(&quot;assets/img/2UML_QR.png&quot;) center / contain no-repeat;height: 256px;"></div>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center align-items-center" style="margin-bottom: 24px;"><textarea id="compiler" style="width: 100%;height: 100%;border-width: 0px;">@startuml
-    Client -> Server : Request
+    Client -> Server: Request
     Server --> Client: Response
 @enduml</textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
@@ -135,7 +135,7 @@
                         <div class="card-body p-sm-5" style="padding: 20px!important;border-radius: 20px;/*border: 2px solid var(--bs-body-color);*/background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
                             <form method="post">
                                 <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;">
-                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;height: 68px;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a program ..." required=""></textarea><select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
+                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a program ..." required=""></textarea><select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
                                             <option value="">Activity</option>
                                             <option value="">Class</option>
                                             <option value="">Component</option>
@@ -165,9 +165,9 @@
 <script src="assets/src/compiler/plantuml_core.js" type="module"></script>
 <script src="assets/src/compiler/code_mirror.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/desc.js?h=3d4b0868c620f98f4e2e3a0f96f93b84"></script>
-    <script src="assets/js/download-uml.js?h=0ab5500c4f1312ec5e5581be65b8a81e"></script>
-    <script src="assets/js/theme.js?h=ba5591acd93fc7a6da54d6fe53c04388"></script>
+    <script src="assets/js/desc.js"></script>
+    <script src="assets/js/download-uml.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
