--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div><!-- End: 2 Rows 1+2 Columns -->
     </section><!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="background: black!important;margin-top: 50px;border-top: 2px solid white ;">
-        <div class="container text-white py-4 py-lg-5" style="padding: 20px;"><a href="https://github.com/robertovicario/2UML/blob/main/LICENSE" style="color: white;font-family: Inter, sans-serif;text-decoration: none;" target="_blank">The MIT License Copyright (c) 2UML 2024</a></div>
+        <div class="container text-white py-4 py-lg-5" style="padding: 20px;"><a href="https://github.com/robertovicario/2UML/blob/main/LICENSE" style="color: white;font-family: Inter, sans-serif;text-decoration: none;" target="_blank">GNU General Public License version 3 (c) 2UML 2024</a></div>
     </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
 <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
